# opencv_contrib

modules/scantrust_qrcode/: CMakeLists.txt
modules/scantrust_qrcode/include/opencv2/: scantrust_qrcode.hpp
modules/scantrust_qrcode/src/: align.cpp  align.hpp  decodermgr.cpp  decodermgr.hpp  precomp.hpp  scantrust_qrcode.cpp
modules/scantrust_qrcode/test/: test_precomp.hpp  test_qrcode.cpp
modules/wechat_qrcode/include/opencv2/: wechat_qrcode.hpp
modules/wechat_qrcode/src/: decodermgr.cpp  decodermgr.hpp  wechat_qrcode.cpp
modules/wechat_qrcode/src/detector/: align.cpp  align.hpp
